; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf32-gen.c_elf32_generic_link_add_symbols.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf32-gen.c_elf32_generic_link_add_symbols.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfd_link_info = type { i32 }

@FALSE = common dso_local global i64 0, align 8
@check_for_relocs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, %struct.bfd_link_info*)* @elf32_generic_link_add_symbols to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @elf32_generic_link_add_symbols(i32* %0, %struct.bfd_link_info* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.bfd_link_info*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store %struct.bfd_link_info* %1, %struct.bfd_link_info** %5, align 8
  %7 = load i64, i64* @FALSE, align 8
  store i64 %7, i64* %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* @check_for_relocs, align 4
  %10 = call i32 @bfd_map_over_sections(i32* %8, i32 %9, i64* %6)
  %11 = load i64, i64* %6, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i64, i64* @FALSE, align 8
  store i64 %14, i64* %3, align 8
  br label %19

15:                                               ; preds = %2
  %16 = load i32*, i32** %4, align 8
  %17 = load %struct.bfd_link_info*, %struct.bfd_link_info** %5, align 8
  %18 = call i64 @bfd_elf_link_add_symbols(i32* %16, %struct.bfd_link_info* %17)
  store i64 %18, i64* %3, align 8
  br label %19

19:                                               ; preds = %15, %13
  %20 = load i64, i64* %3, align 8
  ret i64 %20
}

declare dso_local i32 @bfd_map_over_sections(i32*, i32, i64*) #1

declare dso_local i64 @bfd_elf_link_add_symbols(i32*, %struct.bfd_link_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
